syntax = "proto3";

package proto;

import "google/protobuf/any.proto";

option go_package = "go-grpc/proto/service";

message HelloRequest {
    string name =1;
}

message HelloReply {
    string message=1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns  (HelloReply) {}
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
    rpc Search (SearchRequest) returns (ErrorStatus) {}

    rpc GetList (SearchRequest) returns (SearchResponse) {}
}

message ErrorStatus {
    string message = 1;
    repeated google.protobuf.Any details = 2;
}

message SearchRequest {
    string title = 1;
    Filter filter = 2;
}
message Filter {
    string name = 1;
    int32 station = 2;
    string addr = 3;
}

message SearchResponse {
  message Result {
    string url = 1;
    string title = 2;
    repeated string snippets = 3;
    optional string create_at = 4;
  }
  repeated Result results = 1;
}